--- a/disco.html
+++ b/disco.html
@@ -24,6 +24,6 @@
         </table>
     </div>
     <br><br><br><br><br><br><br><br><br><br><br><br>
-    <h3>Hecho por Luna</h3>
+    <h3>Hecho por Luna e Irandy</h3>
 </body>
 </html>
