--- a/disco.html
+++ b/disco.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Disco de Yoohoo</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="https://images-na.ssl-images-amazon.com/images/I/91x7p6UJnBL._AC_SX355_.jpg" type="image/x-icon">
     <script src="./disco.js"></script>
-    <title>Disco de Yoohoo</title>
 </head>
 <body>
     <h1>Disco de Yoohoo :D</h1>
@@ -23,6 +22,7 @@
             </tr>
         </table>
     </div>
+    <div id="ini"><input type="submit" value="INICIAR"></div>
     <br><br><br><br><br><br><br><br><br><br><br><br>
     <h3>Hecho por Luna e Irandy</h3>
 </body>
