--- a/disco.html
+++ b/disco.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="https://images-na.ssl-images-amazon.com/images/I/91x7p6UJnBL._AC_SX355_.jpg" type="image/x-icon">
-    <script src="./disco.js"></script>
+    <script src="./js/jquery-3.6.0.min.js"></script>
+    <script src="./js/disco.js"></script>
     <title>Disco de Yoohoo</title>
 </head>
 <body>
