FEAT: cambio de jQuery a DOM

--- a/disco.html
+++ b/disco.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="https://images-na.ssl-images-amazon.com/images/I/91x7p6UJnBL._AC_SX355_.jpg" type="image/x-icon">
-    <script src="./js/jquery-3.6.0.min.js"></script>
     <script src="./js/disco.js"></script>
     <title>Disco de Yoohoo</title>
 </head>
-<body>
-    <h1>Disco de Yoohoo :D</h1>
-    <div id="mayor">
+<body id="body">
+    <h1 class="eliminados">Disco de Yoohoo :D</h1>
+    <div id="mayor" class="eliminados">
         <table>
             <tr>
                 <td><div id="cuadro1"></div></td>
@@ -25,7 +24,7 @@
         </table>
     </div>
     <br><br><br><br><br><br>
-    <table id="button">
+    <table id="button" class="eliminados">
         <tr>
             <td>
                 <input type="button" value="Iniciar" id="boton">
@@ -33,6 +32,6 @@
         </tr>
     </table>
     <br><br><br><br><br><br><br><br><br><br>
-    <h3>Hecho por Luna e Irandy</h3>
+    <h3  class="eliminados">Hecho por Luna e Irandy</h3>
 </body>
 </html>
